# talot

./: Cargo.toml  README.md
.github/workflows/: build.yml  release.yml
assets/: core.asset.toml
crates/talot/: Cargo.toml
crates/talot/assets/: README.md  core.asset.json  fmt.js
crates/talot/src/: asset.rs  common.rs  constant.rs  lib.rs  main.rs  resource.rs  state.rs  web.rs
crates/talot/src/plugin/: mod.rs
crates/talot/src/plugin/game/: bundle.rs  component.rs  constant.rs  mod.rs  plugin.rs  resource.rs  state.rs
crates/talot/src/plugin/menu/: component.rs  mod.rs  plugin.rs  state.rs
crates/talot/src/plugin/splash/: component.rs  mod.rs  plugin.rs  resource.rs
crates/talot/web/: .gitignore  README.md  index.html
crates/talot_core/: Cargo.toml
crates/talot_core/src/: attribute.rs  category.rs  effect.rs  emotion.rs  engine.rs  lib.rs  lot.rs  stat.rs
crates/talot_core/src/timing/: mod.rs  timing.rs
crates/talot_core/src/timing/condition/: condition.rs  mod.rs  op.rs
src/: common.rs  config.rs  lib.rs  main.rs
src/core/: asset.rs  category.rs  lot.rs  mod.rs
src/plugins/: game.rs  menu.rs  mod.rs  splash.rs
src/plugins/game/: bundle.rs  component.rs  consntant.rs  constant.rs  mod.rs  plugin.rs  resource.rs
src/plugins/menu/: constant.rs  plugin.rs
src/plugins/splash/: plugin.rs
