[package]
name = "talot"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.12.1"
bevy_common_assets = { version = "0.8.0", features = ["toml"] }
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
