[package]
name = "talot"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.12.1"
bevy_asset_loader = "0.18.0"
bevy_common_assets = { version = "0.8.0", features = ["json"] }
rand.workspace = true
rand_distr.workspace = true
serde.workspace = true
talot_core = { path = "../talot_core" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.89"
